# PersonalAssist

./: .gitignore  Dockerfile  fly.toml  main.py  memory.py  memory_backup.py  orchestrator.py  pyproject.toml  reminders.py  tools.py
.github/workflows/: deploy.yml
docs/: design_decisions.md
tests/: test_reminders.py
